# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "session_parameter_encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto.workspace = true
mcr_ddi_mbor.workspace = true
mcr_ddi_types.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
openssl.workspace = true

[features]
default = []
use-openssl = ["crypto/use-openssl"]
use-symcrypt = ["crypto/use-symcrypt"]

[lints]
workspace = true
